@@ -1,5 +1,8 @@
 Version 2.02.06 -
 =================================
+  Create a log header for replacement in-sync mirror log.
+  Use set_lv() and dev_set() to wipe sections of devices.
+  Add mirror_in_sync() flag to avoid unnecessary resync on activation.
   Add mirror_library description to example.conf.
   Fix uuid_from_num() buffer overrun.
   Make SIZE_SHORT the default for display_size().
